--- a/youtube.html
+++ b/youtube.html
@@ -9,12 +9,7 @@
     <link rel="stylesheet" href="/styles/youtube-general.css">
     <link rel="stylesheet" href="/styles/youtube-header.css">
     <link rel="stylesheet" href="/styles/youtube-video.css">
-
-<style>
-
-
-</style>
-
+    <link rel="stylesheet" href="/styles/youtube-sidebar.css">
 </head>
     <body>
         <div class="header">
@@ -38,6 +33,9 @@
                 <img class="current-user-picture" src="/images/my-channel.jpeg">
             </div>
             
+        </div>
+        <div class="sidebar">
+            sidebar
         </div>
         <div class="video-grid">
             <div class="video-preview">
