--- a/position.html
+++ b/position.html
@@ -18,6 +18,7 @@
         left: 0px;
         right: 0px;
         height: 50px;
+        z-index: 1;
     ">header</div>
     
     <div style="
@@ -28,7 +29,24 @@
         top: 50px;
         bottom: 0;
         width: 72px;
-    ">sidebar</div>
+    ">
+        <div style="
+        position:absolute;
+        background-color: red;
+        color: white;
+        top: 0px;
+        right: 0px;
+        ">X</div>
+        sidebar
+    </div>
+
+    <div style="
+        position:absolute;
+        background-color: red;
+        color: white;
+        top: 60px;
+        right: 10px;
+    ">absolute</div>
 
     <div style="
         background-color: lightblue;
@@ -37,6 +55,19 @@
         position:static;
     ">div 1</div>
     
-    <div style="background-color: lightpink; width: 200px; height: 200px;">div 2</div>
+    <div style="
+        background-color: lightpink;
+        width: 200px;
+        height: 200px;
+        position: relative;
+    ">div 2
+        <div style="
+        position:absolute;
+        background-color: black;
+        color: white;
+        bottom: 10px;
+        right: 10px;
+        ">5:00</div>
+    </div>
 </body>
 </html>
