--- a/youtube.html
+++ b/youtube.html
@@ -29,7 +29,10 @@
             <div class="right-section">
                 <img class="upload-icon" src="/images/upload.svg">
                 <img class="youtube-apps-icon" src="/images/youtube-apps.svg">
-                <img class="notifications-icon" src="/images/notifications.svg">
+                <div class="notification-icon-container">
+                    <img class="notifications-icon" src="/images/notifications.svg">
+                    <div class="notification-count">3</div>
+                </div>
                 <img class="current-user-picture" src="/images/my-channel.jpeg">
             </div>
             
@@ -41,6 +44,7 @@
             <div class="video-preview">
                 <div class="thumbanail-row">
                     <img class="thumbnail" src="/images/thumbnail-1.webp">
+                    <div class="video-time">14:20</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="chanel-picture">
@@ -56,6 +60,7 @@
             <div class="video-preview">
                 <div class="thumbanail-row">
                     <img class="thumbnail" src="/images/thumbnail-2.webp">
+                    <div class="video-time">8:22</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="chanel-picture"> 
@@ -71,6 +76,7 @@
             <div class="video-preview">
                 <div class="thumbanail-row">
                     <img class="thumbnail" src="/images/thumbnail-3.webp">
+                    <div class="video-time">9:13</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="chanel-picture">
@@ -86,6 +92,7 @@
             <div class="video-preview">
                 <div class="thumbanail-row">
                     <img class="thumbnail" src="/images/thumbnail-4.webp">
+                    <div class="video-time">22:09</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="chanel-picture">
@@ -101,6 +108,7 @@
             <div class="video-preview">
                 <div class="thumbanail-row">
                     <img class="thumbnail" src="/images/thumbnail-5.webp">
+                    <div class="video-time">11:17</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="chanel-picture">
@@ -116,6 +124,7 @@
             <div class="video-preview">
                 <div class="thumbanail-row">
                     <img class="thumbnail" src="/images/thumbnail-6.webp">
+                    <div class="video-time">19:59</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="chanel-picture">
