--- a/youtube.html
+++ b/youtube.html
@@ -21,24 +21,55 @@
                 <input class="search-bar" type="text" placeholder="Search">
                 <button class="search-button">
                     <img class="search-icon" src="/images/search.svg">
+                    <div class="tooltip">Search</div>
                 </button>
                 <button class="voice-search-button">
                     <img class="voice-search-icon" src="/images/voice-search-icon.svg">
+                    <div class="tooltip">Search with your voice</div>
                 </button>
             </div>
             <div class="right-section">
-                <img class="upload-icon" src="/images/upload.svg">
-                <img class="youtube-apps-icon" src="/images/youtube-apps.svg">
+                <div class="upload-icon-container">
+                    <img class="upload-icon" src="/images/upload.svg">
+                    <div class="tooltip">Create</div>
+                </div>
+                <div class="youtube-apps-icon-container">
+                    <img class="youtube-apps-icon" src="/images/youtube-apps.svg">
+                    <div class="tooltip">Apps</div>
+                </div>
+                
                 <div class="notification-icon-container">
                     <img class="notifications-icon" src="/images/notifications.svg">
                     <div class="notification-count">3</div>
                 </div>
                 <img class="current-user-picture" src="/images/my-channel.jpeg">
             </div>
-            
         </div>
         <div class="sidebar">
-            sidebar
+            <div class="sidebar-link">
+                <img src="/images/home.svg" alt="">
+                <div>Home</div>
+            </div>
+            <div class="sidebar-link">
+                <img src="/images/explore.svg" alt="">
+                <div>Explore</div>
+            </div>
+            <div class="sidebar-link">
+                <img src="/images/subscriptions.svg" alt="">
+                <div>Subscriptions</div>
+            </div>
+            <div class="sidebar-link">
+                <img src="/images/originals.svg" alt="">
+                <div>Originals</div>
+            </div>
+            <div class="sidebar-link">
+                <img src="/images/youtube-music.svg" alt="">
+                <div>YouTube Music</div>
+            </div>
+            <div class="sidebar-link">
+                <img src="/images/library.svg" alt="">
+                <div>Library</div>
+            </div>
         </div>
         <div class="video-grid">
             <div class="video-preview">
