--- a/HtmlTutorial/position.html
+++ b/HtmlTutorial/position.html
@@ -9,7 +9,7 @@
 
     </style>
 </head>
-<body style="height:3000px;padding-top: 60px;padding-left: 80px;">
+<body style="height:3500px;padding-top: 60px;padding-left: 80px;">
     <div style="
         background-color: black;
         color: white;
@@ -69,5 +69,15 @@
         right: 10px;
         ">5:00</div>
     </div>
+
+    <div style="
+    position: sticky;
+    top: 150px;
+    left: 150px;
+    width: 200px;
+    height: calc(50vh - 100px);
+    background-color: darkgoldenrod;
+    border: 1px solid salmon;
+    ">div3</div>
 </body>
 </html>
