--- a/LMJavaScript/strangerThings.html
+++ b/LMJavaScript/strangerThings.html
@@ -105,11 +105,68 @@
         // Only change code above this line
       }
 
-      cc(2);
-      cc(3);
-      cc(7);
-      cc("K");
-      cc("A");
+      const recordCollection = {
+        2548: {
+          albumTitle: "Slippery When Wet",
+          artist: "Bon Jovi",
+          tracks: ["Let It Rock", "You Give Love a Bad Name"],
+        },
+        2468: {
+          albumTitle: "1999",
+          artist: "Prince",
+          tracks: ["1999", "Little Red Corvette"],
+        },
+        1245: {
+          artist: "Robert Palmer",
+          tracks: [],
+        },
+        5439: {
+          albumTitle: "ABBA Gold",
+        },
+      };
+
+      // Only change code below this line
+      function updateRecords(records, id, prop, value) {
+        let modRec = { ...records };
+        if (value == null) {
+          modRec[id].delete(prop);
+        }
+
+        if (prop != "track" && value != "") {
+          modRec[id][prop] = value;
+        }
+
+        if (prop == "track" && value != "") {
+          if (!modRec[id].hasOwnProperty(prop)) {
+            modRec[id].tracks = [];
+            modRec[id].tracks.put(value);
+          }
+        }
+
+        return modRec;
+      }
+
+      // let olo = updateRecords(
+      //   recordCollection,
+      //   5439,
+      //   "tracks",
+      //   "Take a Chance on Me"
+      // );
+
+      //console.log(olo);
+
+      function rangeOfNumbers(startNum, endNum) {
+        if (startNum <= endNum + 1) {
+          countArray = rangeOfNumbers(startNum + 1, endNum);
+          if (countArray == undefined) return [];
+
+          countArray.unshift(startNum);
+          return countArray;
+        }
+      }
+
+      let lol = rangeOfNumbers(1, 5);
+      console.log(lol);
     </script>
   </body>
 </html>
