--- a/HtmlTutorial/youtube.html
+++ b/HtmlTutorial/youtube.html
@@ -6,80 +6,80 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/styles/youtube-general.css">
-    <link rel="stylesheet" href="/styles/youtube-header.css">
-    <link rel="stylesheet" href="/styles/youtube-video.css">
-    <link rel="stylesheet" href="/styles/youtube-sidebar.css">
+    <link rel="stylesheet" href="/HtmlTutorial//styles/youtube-general.css">
+    <link rel="stylesheet" href="/HtmlTutorial//styles/youtube-header.css">
+    <link rel="stylesheet" href="/HtmlTutorial//styles/youtube-video.css">
+    <link rel="stylesheet" href="/HtmlTutorial/styles/youtube-sidebar.css">
 </head>
     <body>
         <div class="header">
             <div class="left-section">
-                <img class="hamburger-menu" src="/images/hamburger-menu.svg">
-                <img class="youtube-logo" src="/images/youtube-logo.svg">
+                <img class="hamburger-menu" src="/HtmlTutorial/images/hamburger-menu.svg">
+                <img class="youtube-logo" src="/HtmlTutorial/images/youtube-logo.svg">
             </div>
             <div class="midle-section">
                 <input class="search-bar" type="text" placeholder="Search">
                 <button class="search-button">
-                    <img class="search-icon" src="/images/search.svg">
+                    <img class="search-icon" src="/HtmlTutorial/HtmlTutorial/images/search.svg">
                     <div class="tooltip">Search</div>
                 </button>
                 <button class="voice-search-button">
-                    <img class="voice-search-icon" src="/images/voice-search-icon.svg">
+                    <img class="voice-search-icon" src="/HtmlTutorial/images/voice-search-icon.svg">
                     <div class="tooltip">Search with your voice</div>
                 </button>
             </div>
             <div class="right-section">
                 <div class="upload-icon-container">
-                    <img class="upload-icon" src="/images/upload.svg">
+                    <img class="upload-icon" src="/HtmlTutorial/images/upload.svg">
                     <div class="tooltip">Create</div>
                 </div>
                 <div class="youtube-apps-icon-container">
-                    <img class="youtube-apps-icon" src="/images/youtube-apps.svg">
+                    <img class="youtube-apps-icon" src="/HtmlTutorial/images/youtube-apps.svg">
                     <div class="tooltip">Apps</div>
                 </div>
                 
                 <div class="notification-icon-container">
-                    <img class="notifications-icon" src="/images/notifications.svg">
+                    <img class="notifications-icon" src="/HtmlTutorial/images/notifications.svg">
                     <div class="notification-count">3</div>
                 </div>
-                <img class="current-user-picture" src="/images/my-channel.jpeg">
+                <img class="current-user-picture" src="/HtmlTutorial/images/my-channel.jpeg">
             </div>
         </div>
         <div class="sidebar">
             <div class="sidebar-link">
-                <img src="/images/home.svg" alt="">
+                <img src="/HtmlTutorial/images/home.svg" alt="">
                 <div>Home</div>
             </div>
             <div class="sidebar-link">
-                <img src="/images/explore.svg" alt="">
+                <img src="/HtmlTutorial/images/explore.svg" alt="">
                 <div>Explore</div>
             </div>
             <div class="sidebar-link">
-                <img src="/images/subscriptions.svg" alt="">
+                <img src="/HtmlTutorial/images/subscriptions.svg" alt="">
                 <div>Subscriptions</div>
             </div>
             <div class="sidebar-link">
-                <img src="/images/originals.svg" alt="">
+                <img src="/HtmlTutorial/images/originals.svg" alt="">
                 <div>Originals</div>
             </div>
             <div class="sidebar-link">
-                <img src="/images/youtube-music.svg" alt="">
+                <img src="/HtmlTutorial/images/youtube-music.svg" alt="">
                 <div>YouTube Music</div>
             </div>
             <div class="sidebar-link">
-                <img src="/images/library.svg" alt="">
+                <img src="/HtmlTutorial/images/library.svg" alt="">
                 <div>Library</div>
             </div>
         </div>
         <div class="video-grid">
             <div class="video-preview">
                 <div class="thumbanail-row">
-                    <img class="thumbnail" src="/images/thumbnail-1.webp">
+                    <img class="thumbnail" src="/HtmlTutorial/images/thumbnail-1.webp">
                     <div class="video-time">14:20</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="chanel-picture">
-                        <img class="profile-picture" src="/images/channel-1.jpeg">
+                        <img class="profile-picture" src="/HtmlTutorial/images/channel-1.jpeg">
                     </div>
                     <div class="video-info">
                         <p class="video-title">Talking Tech <strong>and AI with</strong> Google CEO Sundar Pichai!</p>
@@ -90,12 +90,12 @@
             </div>
             <div class="video-preview">
                 <div class="thumbanail-row">
-                    <img class="thumbnail" src="/images/thumbnail-2.webp">
+                    <img class="thumbnail" src="/HtmlTutorial/images/thumbnail-2.webp">
                     <div class="video-time">8:22</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="chanel-picture"> 
-                        <img class="profile-picture" src="/images/channel-2.jpeg">
+                        <img class="profile-picture" src="/HtmlTutorial/images/channel-2.jpeg">
                     </div>
                     <div class="video-info">
                         <p class="video-title">Try Not To Laugh Challenge #9</p>
@@ -106,12 +106,12 @@
             </div>
             <div class="video-preview">
                 <div class="thumbanail-row">
-                    <img class="thumbnail" src="/images/thumbnail-3.webp">
+                    <img class="thumbnail" src="/HtmlTutorial/images/thumbnail-3.webp">
                     <div class="video-time">9:13</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="chanel-picture">
-                        <img class="profile-picture" src="/images/channel-3.jpeg">
+                        <img class="profile-picture" src="/HtmlTutorial/images/channel-3.jpeg">
                     </div>
                     <div class="video-info">
                         <p class="video-title">Crazy Tik Toks Taken Moments Before DISASTER</p>
@@ -122,12 +122,12 @@
             </div>
             <div class="video-preview">
                 <div class="thumbanail-row">
-                    <img class="thumbnail" src="/images/thumbnail-4.webp">
+                    <img class="thumbnail" src="/HtmlTutorial/images/thumbnail-4.webp">
                     <div class="video-time">22:09</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="chanel-picture">
-                        <img class="profile-picture" src="/images/channel-4.jpeg">
+                        <img class="profile-picture" src="/HtmlTutorial/images/channel-4.jpeg">
                     </div>
                     <div class="video-info">
                         <p class="video-title">The Simplest Math Problem No One Can Solve - Collatz Conjecture</p>
@@ -138,12 +138,12 @@
             </div>
             <div class="video-preview">
                 <div class="thumbanail-row">
-                    <img class="thumbnail" src="/images/thumbnail-5.webp">
+                    <img class="thumbnail" src="/HtmlTutorial/images/thumbnail-5.webp">
                     <div class="video-time">11:17</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="chanel-picture">
-                        <img class="profile-picture" src="/images/channel-5.jpeg">
+                        <img class="profile-picture" src="/HtmlTutorial/images/channel-5.jpeg">
                     </div>
                     <div class="video-info">
                         <p class="video-title">Kadane's Algorithm to Maximum Sum Subarray Problem</p>
@@ -154,12 +154,12 @@
             </div>
             <div class="video-preview">
                 <div class="thumbanail-row">
-                    <img class="thumbnail" src="/images/thumbnail-6.webp">
+                    <img class="thumbnail" src="/HtmlTutorial/images/thumbnail-6.webp">
                     <div class="video-time">19:59</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="chanel-picture">
-                        <img class="profile-picture" src="/images/channel-6.jpeg">
+                        <img class="profile-picture" src="/HtmlTutorial/images/channel-6.jpeg">
                     </div>
                     <div class="video-info">
                         <p class="video-title">Anything You Can Fit In The Circle I’ll Pay For</p>
